# sosl_auv_sim

./: CMakeLists.txt  package.xml
launch/: auv_horizontal_control.launch  auv_speed_control.launch
src/: auv_model.cpp  heading_controller.cpp  speed_controller.cpp
